force-app/main/default/objects/custom_create196__c/custom_create196__c.object-meta.xml
<CustomObject>
    <label>Custom created object196</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects196</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>