force-app/main/default/objects/custom_create196__c/fields/custom_create_196field504__c.field-meta.xml
<CustomField>
    <fullName>custom_create_196field504__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 196field504</label>
    <type>Checkbox</type>
</CustomField>